--- a/Reference_Files/Name_Conversion/Gene_Conversion_Functions.ipynb
+++ b/Reference_Files/Name_Conversion/Gene_Conversion_Functions.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "26503f0f",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "name_conversion <- function(gene_list){\n",
-    "    conversion_file <- read.csv(\"Clean_conversion_file.txt\", sep = \"\\t\")[,c(1,8)]\n",
+    "    conversion_file <- read.csv(\"../Reference_Files/Name_Conversion/Clean_conversion_file.txt\", sep = '\\t')[,c(1,8)]\n",
     "    #Replace the .t#.t# with nothing \n",
     "    conversion_file$`X.5.5` <- gsub(\".t\\\\d.?\\\\d?\", \"\", conversion_file$`X.5.5`)\n",
     "    conversion_file$`X5.3.1` <- gsub(\".t\\\\d.?\\\\d?\", \"\", conversion_file$`X5.3.1`)\n",
@@ -32,38 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "b73f3bec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "'/Users/princess/Desktop/Projects/References/Name_Conversion_Files'"
-      ],
-      "text/latex": [
-       "'/Users/princess/Desktop/Projects/References/Name\\_Conversion\\_Files'"
-      ],
-      "text/markdown": [
-       "'/Users/princess/Desktop/Projects/References/Name_Conversion_Files'"
-      ],
-      "text/plain": [
-       "[1] \"/Users/princess/Desktop/Projects/References/Name_Conversion_Files\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "conversion_file <- read.csv(\"Clean_conversion_file.txt\", sep = \"\\t\")[,c(1,8)]\n",
-    "getwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "aa6c2735",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +61,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.1"
+   "version": "4.0.3"
   },
   "toc": {
    "base_numbering": 1,
